# TIL

./: alembic.ini  containers.py  database.py  main.py  pyproject.toml  test.py
common/: auth.py  messaging.py
migrations/: env.py
migrations/versions/: 2024_12_13_2231-64f661eaab42_add_user_table.py  837dd88358dc_add_user_table.py  afb87b6ef1b4_add_note_tag.py  f72fdfc1503a_user_add_memo.py
note/domain/repository/: note_repo.py
server/: .gitignore  config.py  containers.py  context_vars.py  main.py  middlewares.py  pyproject.toml
server/common/: auth.py  logger.py
server/migrations/versions/: 33e5a24fc918_add_memo.py  6b7d6c185a27_add_role_column_to_user.py  6e7acf8c8487_add_role_column_to_user.py
server/note/application/: note_service.py
server/note/domain/: note.py
server/note/infra/db_models/: note.py
server/note/infra/repository/: note_repo.py
server/note/interface/controllers/: note_controller.py
server/test/: celery_result.py  test.py
server/user/application/: send_welcome_email_task.py  user_service.py
server/user/domain/: user_test.py
server/user/domain/repository/: user_repo.py
server/user/infra/repository/: user_repo.py
server/user/interface/: README.md
test/: deserialize_result.py  test.py
user/application/: README.md  email_service.py  user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: crypto.py  db_utils.py
